--- a/main.html
+++ b/main.html
@@ -4,9 +4,40 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+    <style>
+        .imageContainer{
+            width: 1100px;
+        }
+        .column{
+            width: 200px;
+        }
+        .column2{
+            width: 600px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="imageContainer">
+        <div class="row">
+            <div class="column1">
+                <img src="https://picsum.photos/id/237/200/300" alt="">
+            </div>
+            <div class="column2"></div>
+            <div class="column1">
+                <img src="https://picsum.photos/id/237/200/300" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column1">
+                <img src="https://picsum.photos/id/237/200/300" alt="">
+            </div>
+            <div class="column2"></div>
+            <div class="column1">
+                <img src="https://picsum.photos/id/237/200/300" alt="">
+            </div>
+        </div>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
