--- a/main.html
+++ b/main.html
@@ -4,40 +4,37 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-    <style>
-        .imageContainer{
-            width: 1100px;
-        }
-        .column{
-            width: 200px;
-        }
-        .column2{
-            width: 600px;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="imageContainer">
-        <div class="row">
-            <div class="column1">
-                <img src="https://picsum.photos/id/237/200/300" alt="">
-            </div>
-            <div class="column2"></div>
-            <div class="column1">
-                <img src="https://picsum.photos/id/237/200/300" alt="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="column1">
-                <img src="https://picsum.photos/id/237/200/300" alt="">
-            </div>
-            <div class="column2"></div>
-            <div class="column1">
-                <img src="https://picsum.photos/id/237/200/300" alt="">
-            </div>
-        </div>
-    </div>
+   <div class="containerWith">
+	   <div class="imageContainer">
+		   <table>
+			   <tr>
+				   <td class="first">
+					   <img src="https://picsum.photos/id/236/200/300" alt="ipsum photo">
+				   </td>
+				   <td class="second">
+					   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+				   </td>
+				   <td class="last">
+					   <img src="https://picsum.photos/id/235/200/300" alt="ipsum photo">
+				   </td>
+			   </tr>
+			   <tr>
+				   <td class="first">
+					   <img src="https://picsum.photos/id/236/200/300" alt="ipsum photo">
+				   </td>
+				   <td class="second">
+					   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+				   </td>
+				   <td class="last">
+					   <img src="https://picsum.photos/id/235/200/300" alt="ipsum photo">
+				   </td>
+			   </tr>
+		   </table>
+	   </div>
+   </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
